--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wudan</groupId>
     <artifactId>journey</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>commons-dao</module>
+        <module>commons-security</module>
+        <module>commons-log</module>
+        <module>commons-exceptions</module>
+        <module>commons-generator</module>
+        <module>commons-util</module>
+    </modules>
     <name>journey</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
