rest工程异常处理封装 日志封装

--- a/commons-log/pom.xml
+++ b/commons-log/pom.xml
@@ -12,5 +12,11 @@
     <groupId>org.wudan</groupId>
     <artifactId>commons-log</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.wudan</groupId>
+            <artifactId>commons-exception</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
