--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>commons-dao</module>
         <module>commons-security</module>
         <module>commons-log</module>
-        <module>commons-exceptions</module>
+        <module>commons-exception</module>
         <module>commons-generator</module>
         <module>commons-util</module>
     </modules>
@@ -23,15 +23,20 @@
         <springframework.version>4.2.5.RELEASE</springframework.version>
         <gson.version>2.6.2</gson.version>
         <slf4j.version>1.7.21</slf4j.version>
+        <aspectjweaver.version>1.7.4</aspectjweaver.version>
+        <servlet-api.version>2.5</servlet-api.version>
+        <zookeeper.version>3.4.5</zookeeper.version>
     </properties>
 
     <dependencies>
+
         <!--junit工具-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+
         <!--spring相关 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -47,6 +52,16 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
         </dependency>
 
         <!--redis客户端 -->
@@ -70,9 +85,73 @@
             <version>${slf4j.version}</version>
         </dependency>
 
+        <!-- 异常处理模块使用 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- zookeeper相关 -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.0.1-incubating</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.0.1-incubating</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.logback-extensions</groupId>
+            <artifactId>logback-ext-spring</artifactId>
+            <version>0.1.2</version>
+        </dependency>
 
     </dependencies>
 
+    <!-- 编译版本为1.8 -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
