--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>commons-exception</module>
         <module>commons-generator</module>
         <module>commons-util</module>
+        <module>demo-api</module>
     </modules>
     <name>journey</name>
     <properties>
@@ -26,6 +27,15 @@
         <aspectjweaver.version>1.7.4</aspectjweaver.version>
         <servlet-api.version>2.5</servlet-api.version>
         <zookeeper.version>3.4.5</zookeeper.version>
+        <mybatis-generator-core.version>1.3.2</mybatis-generator-core.version>
+        <curator.version>2.0.1-incubating</curator.version>
+        <logback.version>1.1.3</logback.version>
+        <logback-ext-spring.version>0.1.2</logback-ext-spring.version>
+        <commons-io.version>2.4</commons-io.version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <commons-beanutils.version>1.9.2</commons-beanutils.version>
+        <freemarker.version>2.3.23</freemarker.version>
+        <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
     </properties>
 
     <dependencies>
@@ -112,29 +122,63 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>2.0.1-incubating</version>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>2.0.1-incubating</version>
+            <version>${curator.version}</version>
         </dependency>
 
-
+        <!-- logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.1.3</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.3</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.logback-extensions</groupId>
             <artifactId>logback-ext-spring</artifactId>
-            <version>0.1.2</version>
+            <version>${logback-ext-spring.version}</version>
+        </dependency>
+
+        <!-- mybaits代码生成器-->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>${mybatis-generator-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>${commons-logging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${commons-beanutils.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
+
+        <!--spring 参数校验-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
     </dependencies>
