日志 异常整合

--- a/commons-exception/pom.xml
+++ b/commons-exception/pom.xml
@@ -11,6 +11,12 @@
 
     <groupId>org.wudan</groupId>
     <artifactId>commons-exception</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.wudan</groupId>
+            <artifactId>commons-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
