--- a/commons-dao/src/main/resources/jdbc.properties
+++ b/commons-dao/src/main/resources/jdbc.properties
@@ -1,7 +1,8 @@
-connection.username=root
-connection.password=123456
-#connection.password=sinldo.com
-connection.url=jdbc:mysql://127.0.0.1:3306/mingrui?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
+#connection.username=root
+connection.username=wudan
+#connection.password=123456
+connection.password=Wd5165187
+connection.url=jdbc:mysql://123.56.19.252:3306/mingrui?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 #connection.url=jdbc:mysql://127.0.0.1:3306/icall?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 connection.driverClassName=com.mysql.jdbc.Driver
 #connection.initialSize=10
